--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h2>This code is quite useful btw</h2>
+    <h2>This code is quite useful by the way</h2>
 </body>
 </html>
